# follow-my-reading

./: .gitattributes  .gitignore  .gitlab-ci.yml  .ruff.toml  README.md  config.py  docs.py  example.config.json  main.py  makefile  mypy.ini  pyproject.toml
api/v1/: __init__.py  audio.py  auth.py  auth_utils.py  comparison.py  config.py  image.py  models.py  router.py  task.py  task_utils.py
core/: task_system.py
core/models/: __init__.py  base.py  loader.py
core/plugins/: __init__.py  base.py  loader.py  no_mem.py
core/processing/: __init__.py  audio.py  audio_split.py  image.py  task.py  text.py
core/tasks/: __init__.py  queue.py  worker.py
deploy/: standalone.dockerfile  standalone.sh
models_plugins/: easyocr.py  easyocr_plugin.py  paddleocr.py  paddleocr_plugin.py  simpleHTR.py  simpleHTR_plugin.py  tesseract.py  tesseract_plugin.py  voskapi.py  voskapi_plugin.py  wav2vec2.py  wav2vec2_plugin.py  whisper.py  whisper_plugin.py
plugins/: ara_tesseract_plugin.py  ara_vosk_plugin.py  easyocr_plugin.py  en_ar_easyocr_plugin.py  en_ru_easyocr_plugin.py  eng_tesseract_plugin.py  eng_vosk_plugin.py  multilang_tesseract_plugin.py  paddleocr_plugin.py  rus_tesseract_plugin.py  rus_vosk_plugin_disabled.py  simpleHTR_plugin.py  tesseract_plugin.py  voskapi_plugin.py  wav2vec2_plugin.py  whisper_plugin.py
public/: index.html
tests/: test_audio.py  test_image.py
tests/audio/: 940ed60d-7c9b-48dd-aeb6-3a93e1412f44
