[tool.poetry]
name = "follow-my-reading"
version = "0.1.0"
description = "follow my reading: image, text, and audio processing"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "follow_my_reading"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.97.0"
pydantic = "^1.10.9"
uvicorn = "^0.22.0"
aiofiles = "^23.1.0"
types-aiofiles = "^23.1.0.4"
pytesseract = "^0.3.10"
openai-whisper = {git = "https://github.com/openai/whisper.git"}
python-multipart = "^0.0.6"
easyocr = "^1.7.0"
htr-pipeline = {git = "https://github.com/githubharald/HTRPipeline.git"}
wave = "^0.0.2"
librosa = "^0.10.0.post2"
torch = "^2.0.1"
transformers = "^4.30.2"
opencv-python = "<=4.6.0.66"
pymupdf = {url = "https://github.com/pymupdf/PyMuPDF/archive/refs/tags/1.20.0.zip"}
vosk = "0.3.44"
paddlepaddle = "2.4.2"
paddleocr = "^2.6.1.3"
pydub = "^0.25.1"
rq = "^1.15.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"
black = "^23.3.0"
mypy = "^1.3.0"
types-redis = "^4.5.5.2"
rq-dashboard = "^0.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
