[tool.poetry]
name = "follow-my-reading"
version = "0.1.0"
description = "follow my reading: image, text, and audio processing"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.97.0"
pydantic = {extras = ["dotenv"], version = "^1.10.9"}
uvicorn = "^0.22.0"
aiofiles = "^23.1.0"
pytesseract = "^0.3.10"
openai-whisper = {git = "https://github.com/openai/whisper.git"}
python-multipart = "^0.0.6"
numba = "^0.57.1"
llvmlite = "^0.40.1"
easyocr = "^1.7.0"
vosk = "0.3.44"
pydub = "^0.25.1"
transformers = "^4.30.2"
librosa = "^0.10.0.post2"
huey = "^2.4.5"
nest-asyncio = "^1.5.6"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = "^1.7.4"
bcrypt = "^4.0.1"
redis = "^4.6.0"
fastapi-limiter = "^0.1.5"



[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"
black = "^23.3.0"
mypy = "^1.3.0"
types-redis = "^4.5.5.2"
isort = "^5.12.0"
types-aiofiles = "^23.1.0.4"
mypy-gitlab-code-quality = "^0.0.15"



[tool.poetry.group.mypy.dependencies]
mypy-gitlab-code-quality = "^0.0.15"
mypy = "^1.4.1"
types-redis = "^4.6.0.2"
types-aiofiles = "^23.1.0.4"
pydantic = {version = "^1.10.9", extras = ["dotenv"]}
librosa = "^0.10.0.post2"
fastapi = "^0.97.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
